# climate

./: .gitignore  README.md  pyproject.toml
notebooks/: TFLIT_test.ipynb  TF_fire_classification.ipynb
