[tool.poetry]
name = "climate"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.3.5"
seaborn = "^0.11.2"
keras = "^2.7.0"
sklearn = "^0.0"
tensorflow = "^2.7.0"
opencv-python = "^4.5.4"



[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"
tqdm = "^4.62.3"

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "*.pyc",
    ".mypy_cache",
    "venv"
]
max-complexity = 10
max-line-length = 120


[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


